--- a/src/components/factory/button.module.css
+++ b/src/components/factory/button.module.css
@@ -12,10 +12,12 @@
 
 .small {
   font-size: 1rem;
+  letter-spacing: 0.05rem;
 }
 
 .large {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
+  letter-spacing: 0.02rem;
 }
 
 /* TODO: move all color definitions to config */
