--- a/src/components/factory/button.module.css
+++ b/src/components/factory/button.module.css
@@ -8,6 +8,7 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  font-family: inherit;
 }
 
 .small {
