--- a/src/components/factory/button.module.css
+++ b/src/components/factory/button.module.css
@@ -8,14 +8,17 @@
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none; /* Standard syntax */
+  font-family: inherit;
 }
 
 .small {
   font-size: 1rem;
+  letter-spacing: 0.05rem;
 }
 
 .large {
-  font-size: 1.25rem;
+  font-size: 1.2rem;
+  letter-spacing: 0.02rem;
 }
 
 /* TODO: move all color definitions to config */
