--- a/src/components/dialogs/import-chip-dialog.module.css
+++ b/src/components/dialogs/import-chip-dialog.module.css
@@ -1,16 +1,33 @@
-.circuitNameInput {
+.inputsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.chipNameInput {
+  background-color: #292828;
+  color: #fff;
+  border: 0;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  padding: 0.4rem;
+}
+
+.blueprintInput {
   background-color: #292828;
   color: #fff;
   border: 0;
   font-size: 1rem;
-  padding: 0.2rem;
+  padding: 0.4rem;
 }
+
 .actionButtons {
   display: flex;
   flex-direction: row;
   gap: 0.3rem;
   margin-top: 1rem;
 }
+
 .actionButton {
   flex: 1;
   height: 2.5rem;
